national panopticon mechanic

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1567,7 +1567,7 @@
   PB_RUS_Invite_Sagallo:0 "Invite Sagallo To Our Faction"
 
   PB_RUS_Commonality_Consensus:0 "The Commonality Consensus"
-  PB_RUS_Commonality_Consensus_desc:0 "\n\n\n\n\n\nRepresenting the natural end stage of democracy, the Commonality Consensus is the brainchild of Zofia Tesla. A radical proposal, the Consensus would use modified Tesla towers and neural implants to allow the government to operate on a unconscious national consensus. In effect, this system would render the need for elected officials moot, as all legislation could be handled simply by issuing a system ping to request a neural consensus from the nation. True democracy, unhindered and absolute, where every human in Russia can cast their vote with a mere thought.\n\nTo bring the system online, we must construct §YTesla towers§! in major population centers. Once this phase is complete, we can begin distributing the neural implants across the country. Once both phases are complete, the Commonality Consensus can be brought online and begin churning data for the government."
+  PB_RUS_Commonality_Consensus_desc:0 "\n\n\n\n\n\nRepresenting the natural end stage of democracy, the Commonality Consensus is the brainchild of Zofia Tesla. A radical proposal, the Consensus would use modified Tesla towers and neural implants to allow the government to operate on a unconscious national consensus. In effect, this system would render the need for elected officials moot, as all legislation could be handled simply by issuing a system ping to request a neural consensus from the nation. True democracy, unhindered and absolute, where every human in Russia can cast their vote with a mere thought.\n\nTo bring the system online, we must construct §YTesla towers§! in major population centers. Once this phase is complete, we can begin distributing the neural implants across the country. Once both phases are complete, the Commonality Consensus can be brought online and begin churning data for the government.\n\n[RUS_get_commonality_text]"
   PB_RUS_Commonality_Center_Moscow:0 "Activate the Moscow Relay Tower"
   PB_RUS_Commonality_Center_Moscow_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
   PB_RUS_Commonality_Center_Petersburg:0 "Activate the Petersburg Relay Tower"
@@ -1610,6 +1610,55 @@
 
   PB_RUS_Luddite_Rebels:0 "Luddite Rebel Attack"
 
+  RUS_commonality_phase_1_text: "§5Commonality Consensus§! is in the §YFirst Phase§!, currently awaiting for the activation of the §YRelay Towers Network§!"
+  RUS_commonality_phase_2_text: "§5Commonality Consensus§! is in the §YSecond Phase§!, currently awaiting for the distribution of the §YNeural Implants§!"
+  RUS_commonality_phase_3_text: "§5Commonality Consensus§! is in the §YThird Phase§!, currently awaiting for the §YCommonality Activation§!"
+
+  PB_RUS_National_Panopticon_Project:0 "The National Panopticon"
+  PB_RUS_National_Panopticon_Project_desc:0 "\n\n\n\n\n\n        Grestin pls add some nice text here adn picture above  .\n\n[RUS_get_panopticon_text]"
+  PB_RUS_Panopticon_Surveillance_Moscow:0 "Activate the Moscow Surveillance System"
+  PB_RUS_Panopticon_Surveillance_Moscow_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+  PB_RUS_Panopticon_Surveillance_Petersburg:0 "Activate the Surveillance System"
+  PB_RUS_Panopticon_Surveillance_Petersburg_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+  PB_RUS_Panopticon_Surveillance_Kiev:0 "Activate the Kiev Surveillance System"
+  PB_RUS_Panopticon_Surveillance_Kiev_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+  PB_RUS_Panopticon_Surveillance_Tsaritsyn:0 "Activate the Tsaritsyn Surveillance System"
+  PB_RUS_Panopticon_Surveillance_Tsaritsyn_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+  PB_RUS_Panopticon_Surveillance_Yekaterinburg:0 "Activate the Yekaterinburg Surveillance System"
+  PB_RUS_Panopticon_Surveillance_Yekaterinburg_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+  PB_RUS_Panopticon_Surveillance_Novonikolayevsk:0 "Activate the Novonikolayevsk Surveillance System"
+  PB_RUS_Panopticon_Surveillance_Novonikolayevsk_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+  PB_RUS_Panopticon_Surveillance_Irkutsk:0 "Activate the Irkutsk Surveillance System"
+  PB_RUS_Panopticon_Surveillance_Irkutsk_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+  PB_RUS_Panopticon_Surveillance_Vladivostok:0 "Activate the Vladivostok Surveillance System"
+  PB_RUS_Panopticon_Surveillance_Vladivostok_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+  PB_RUS_Panopticon_Surveillance_Alaska:0 "Activate the Novo-Arkhangelsk Surveillance System"
+  PB_RUS_Panopticon_Surveillance_Alaska_desc:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+
+  PB_RUS_Spread_Propaganda_Petersburg:0 "Spread Propaganda in Saint Petersburg"
+  PB_RUS_Spread_Propaganda_Moscow:0 "Spread Propaganda in Moscow"
+  PB_RUS_Spread_Propaganda_Kiev:0 "Spread Propaganda in Kiev"
+  PB_RUS_Spread_Propaganda_Tsaritsyn:0 "Spread Propaganda in Tsaritsyn"
+  PB_RUS_Spread_Propaganda_Yekaterinburg:0 "Spread Propaganda in Yekateringburg"
+  PB_RUS_Spread_Propaganda_Novonikolayevsk:0 "Spread Propaganda in Novonikolayevsk"
+  PB_RUS_Spread_Propaganda_Irkutsk:0 "Spread Propaganda in Irkutsk"
+  PB_RUS_Spread_Propaganda_Vladivostok:0 "Spread Propaganda in Vladivostok"
+
+  PB_RUS_Panopticon_Advance_Phase_2:0 "Advance to Phase 2"
+  PB_RUS_Panopticon_Activation:0 "Begin the Widespread Observation with the National Panopticon System"
+  RUS_Panopticon_Surveillance_Complete_tt:0 "All §0National Panopticon Surveillance Systems§! are constructed and §Gactive§!"
+  RUS_Panopticon_Propaganda_Complete_tt:0 "All §0National Panopticon Propaganda Centers§! are §Gactive§!"
+
+  PB_RUS_Panopticon_Advance_Phase_3:0 "Advance to Phase 3"
+
+  RUS_Panopticon_Surveillance_Tip_tt:0 "Construct a Tesla Tower in the highlighted state via the Construction Menu. You may need to sacrifice other buildings to make slots available, or use slots allotted via focuses."
+  RUS_Panopticon_Surveillance_under_Construction_tt:0 "A §0National Panopticon Surveillance System§! is §rNOT§! currently §Yactivating.§!"
+  RUS_Panopticon_Surveillance_begin_Construction_tt:0 "A §0National Panopticon Surveillance System§! will §Gbegin§! activation in this state."
+  RUS_Panopticon_Surveillance_Construction_complete_tt:0 "A §0National Panopticon Surveillance System§! will §Gcomplete§! activation in this state."
+
+  RUS_panopticon_phase_1_text: "§0National Panopticon§! is in the §YFirst Phase§!, currently awaiting for the activation of the §YSurveillance Systems§! and deployment of the §YAgents§!"
+  RUS_panopticon_phase_2_text: "§0National Panopticon§! is in the §YSecond Phase§!, currently awaiting for the activation of the §YSubconcious Propaganda Systems§!"
+  RUS_panopticon_phase_3_text: "§0National Panopticon§! is in the §YThird Phase§!, currently awaiting for the §YTotal Invigilation and Observation§!"
   ##########################
   # BALANCE OF POWER
   ##########################  
@@ -1857,6 +1906,7 @@
   PB_RUS_Grestin_Add_A_Nice_Ending_Event:0 "\nGrestin, add a nice event about some shit for russia's final post war focus, could be about anything, maybe what you had for dinner, your favourite colour, whats it like to suck a hoi4. =}\n\nAnyways §CS§!§Ok§!§gi§!§Bb§!§CHi§!§Yd§!§Ci§! §gT§!§Co§!§Oi§!§Pl§!§He§!§Yt§! or whatever the fuck the kids say these days."
 
   PB_RUS_Perfect_Democracy_tt:0 "The §GCommonality Consensus Project§! will begin implementation, opening up additional £decision_icon_small decisions."
+  PB_RUS_National_Panopticon_tt:0 "The §0National Panopticon Project§! will begin implementation, opening up additional £decision_icon_small decisions."
 
   #######################
   # ARMY SPIRITS
