--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -1041,6 +1041,9 @@ attack_chopper_equipment_3_desc:0 "A marvel on the battlefield and a dreadful so
 
 
   ## EQUIPMENT UPGRADES
+ EQUIPMENT_MODULE_NOT_ALLOWED:1 "§RBlocked§!"
+ tank_nsb_engine_upgrade:0 "$tank_engine_upgrade$"
+ tank_nsb_armor_upgrade:0 "$tank_armor_upgrade$"
  tank_armor_upgrade:0 "Armor"
  tank_armor_upgrade_desc:0 "Better armor than your enemies can penetrate is a huge advantage to your divisions but is probably going to  slow you down."
  tank_gun_upgrade:0 "Main Gun"
