--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -21,6 +21,8 @@
  cat_amalgamate: "Amalgamates"
  cat_jet_troopers: "Jet Troopers"
  cat_gunslingers:0 "Gunslingers"
+ cat_transport_heli: "Transpoer Helicopters"
+ cat_attack_heli: "Attack Helicopters"
   ## TECHTREE FOLDERS ##
  automatrons_folder:0 "Automatrons"
  automatrons_folder_desc:0 "Automats and all their variants."
