few more focus descriptions

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -866,7 +866,7 @@
   ##########################  
   
   PB_RUS_1933_Duma:0 "Third Meeting of the Provisional Duma"
-  PB_RUS_1933_Duma_desc:0 ""
+  PB_RUS_1933_Duma_desc:0 "Ever since the chaos of the Great War, the Russian people, and some of our own politicians, have made made calls for change and reform of our politian system. These are cries that we can ignore no more. We must begin organizing the third meeting of the Provisional Duma, Here we will discuss several important issues, most notably the role of local regonalist Dumas. This mey very well shape the future of Russia. So the outcome of this meeting is not to be decided lightly."
   PB_RUS_Increase_Galician_Forces:0 "Increase Our Forces in Galicia"
   PB_RUS_Increase_Galician_Forces_desc:0 "Clashes in the Galician hinterlands have grown in intensity lately with the Poles becoming increasingly brazen in their attacks. With the local garrison unable to deal with the situation by themselves it is necessary that additional forces are sent to the region to quell the unrest."
   PB_RUS_Commit_to_Finland:0 "Finnish Off the Winter War"
@@ -935,6 +935,7 @@
   PB_RUS_Integrate_Unions:0 "Integrate the Unions"
   PB_RUS_Integrate_Unions_desc:0 "Although some radicals may seek to turn worker's organizations into agents of chaos, when held on a tight leash they can be extremely beneficial to society. Unions that are willing to cooperate with the government will be given protections, and with a newly created labor bureau, an official channel of negotiations is opened to solve diputes in an orderly manner."
   PB_RUS_Focus_on_Metropolitan_Russia:0 "Focus on Metropolitan Russia"
+  PB_RUS_Focus_on_Metropolitan_Russia_desc:0 "Russia, in spite of its vast size, has the biggest population concentration in the Saint Petersburg-Moscow-Tsaritsyn Belt. This core of our empire must be tended to, no matter what the people who suggest otherwise say. We shall affirm the status of the Russian middle class, who now make up the majority of the population of the Belt, in order to solidify the Russian Imperial Core, the most important part of our empire."
   PB_RUS_First_Five_Year_Plan:0 "Propose the First Five Year Plan"
   PB_RUS_First_Five_Year_Plan_desc:0 "Russia is a nation with a great deal of economic potential, vast territories with equally vast populations and natural resources. But for the longest time, that was all we had: potential. Is it time we turn that potential into something tangible. As our cities have recieved plenty of attention, it is turn to look to our vast rural country side. To this end, we officially propose our first Five Year Plan. This will allow us to improve economic development in regions neglected until recently."
   PB_RUS_Economic_Integrate_Poland:0 "Economic Integration with Poland"
@@ -953,6 +954,7 @@
   PB_RUS_Expand_Alaskan_Pipeline:0 "Expand the Trans-American Pipeline"
   PB_RUS_Expand_Alaskan_Pipeline_desc:0 "Now that the foundations are in place, our oil supply network can grown exponentially until it encompasses the entirety of North America. It is finally time to realize Russia's dreams of energy dominance!"
   PB_RUS_Establish_Ministry_of_Energy:0 "Establish the Ministry of Energy"
+  PB_RUS_Establish_Ministry_of_Energy_desc:0 "Russia overflows with natural resources: coal, oil, diamonds, precious metals. Unfortunately, previous regimes have failed to efficiently exploit the bounty God has sown in our Motherland. The Ministry of Energy will allow for regional overseers to guide the extraction of Russia's riches for the betterment of all. Let us waste no time, strike the earth!"
 
   PB_RUS_Expand_Area_Zero_Funding:0 "Expand Area Zero Funding"
   PB_RUS_Expand_Area_Zero_Funding_desc:0 "All across the world, fires are burning. Tensions between France and Germany are ever higher, and there is even talk of revolution in the Americas. If we are to survive, we must work on protecting and improving our nation. Not with guns but with science. In Manchuria is a research facility called Area Zero, offically it does not exist, but it houses some of our grestest minds. With war on the horizon, its budget shall be increased. It will be allowed to do whatever is needed to give Russia and its people an edge over our enemies. "
