helicopter country MIOs

--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -453,6 +453,7 @@ PB_ENG_Harland_Wolff:0 "Harland & Wolff"
 PB_ENG_John_Brown_Company:0 "John Brown & Company"
 PB_ENG_Scapa_Flow_Committee:0 "Scapa Flow Committee"
 PB_ENG_Avro_Airworks:0 "Avro Airworks"
+ENG_westland_organization:0 "Westland Works"
 PB_ENG_De_Havilland:0 "De Havilland Ltd"
 PB_ENG_Supermarine:0 "Supermarine Aviation Works"
 PB_ENG_Fairey:0 "Fairey Aviation Company"
@@ -476,6 +477,7 @@ PRS_Schichau_Organisation:0 "Schichau-Werke"
 PRS_albatros_organization:0 "Albatros Flugzeugwerke"
 PRS_werft_organization:0 "Werft zu Danzig"
 PRS_argus_organization:0 "Argus Bomber"
+PRS_achgelis_organization: "Achgelis Hubschrauberwerke"
 PRS_nag_organization:0 "Neue Automobil Gesellschaft"
 
 ##########################
@@ -493,6 +495,7 @@ RUS_POR_organization:0 "Polikarpov Aircraft Plant"
 RUS_OKB_organization:0 "OKB"
 RUS_Iluyshin_organization:0 "Ilyushin Aviation Complex"
 RUS_Beriev_organization:0 "Beriev Aeronautical Company"
+RUS_Kamov_organization: "Kamov"
 RUS_Batlic_Shipyard_organization:0 "Baltic Shipyard"
 RUS_BlackSea_Shipyard_organization:0 "Nikolaev Shipyard"
 RUS_Dalzavod_Shipyard_organization:0 "Dalzavod Ship Centre"
@@ -525,6 +528,7 @@ PB_GER_Skoda_Arms:0 "Škoda Armworks"
 PB_GER_IG_Farben:0 "IG Farben"
 PB_GER_Krupp:0 "Krupp AG"
 PB_GER_Sinnesloschen:0 "Sinneslöschen"
+GER_gothaer_organization: "Gothaer DFF"
 
 ##########################
 # Frace - Maybe both
@@ -540,6 +544,7 @@ PB_FRA_ACF_Special:0 "ACF Submarine Division"
 PB_FRA_Sncac:0 "SNCAC"
 PB_FRA_Sncan:0 "SNCAN"
 PB_FRA_Sncaso:0 "SNCASO"
+FRA_SNCASO_organization: "SNCASO"
 PB_FRA_Sncao:0 "SNCAO"
 PB_FRA_mas:0 "MAS Armworks"
 PB_FRA_Schneider:0 "Schneider Artillery"
@@ -575,6 +580,7 @@ PB_AME_Donald_Wills_Douglas:0 "Donald Wills Douglas Sr."
 PB_AME_Howard_Hughes:0 "Howard Hughes"
 PB_AME_Walt_Disney:0 "Walter E. Disney"
 PB_AME_Robert_Heinlein:0 "Robert Heinlein"
+AME_bell_organization: "Bell Aircraft"
 
 PB_EIEC:0 "Electronics Megacorp"
 PB_Industrial_Megacorp:0 "Industrial Megacorp"
