more russia loc

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1020,9 +1020,13 @@
   PB_RUS_Pivot_Towards_Peasants:0 "Pivot towards the Peasants"
   PB_RUS_Pivot_Towards_Peasants_desc:0 "Before the war, our nation's economy was built on the backs of workers and peasants. Men and women who did back breaking labour just to receive handfuls of bread and minimal wages. This cannot be allowed to continue. An economy should support the people, not exploit them. Our economic framework shall be moulded to aid those in the lower rungs of society. Our future shall be built not on their backs, but with them by our side."
   PB_RUS_Etatist_Model:0 "Embrace the Etatist Model"
+  PB_RUS_Etatist_Model_desc:0 "Many nations across the world allow their economies to run wild and unregulated. Believing this promotes economic growth and prosperity, while this certainly can be the case, it also invites corruption and exploitation. Only the state itself should be allowed to control the economy. It will remain firmly in their control, only state sanctioned enterprise will be tolerated. Any who fail to comply will be absorbed or removed."
   PB_RUS_National_Protectionism:0 "National Protectionism"
+  PB_RUS_National_Protectionism_desc:0 "Our nation's economy, though well on the road to recover from the war, is far too delicate to be opened up to the world. It would be like diving into a vat of radioactive waste right after recovering from cancer. But that does not mean that we need to seal ourselves off from the world entirely. International trade must simply be regulated and controlled rather than allowed in freely. Ensuring trade is done in a way we can manage."
   PB_RUS_Imperial_Corporations:0 "Protect the Imperial Corporations"
+  PB_RUS_Imperial_Corporations_desc:0 "Given the economic ravages of war, many of the major companies in our nation are understandably concerned. These Imperial Corporations, so named due to their close ties to the Imperial Government, must be granted increased protections. They have played a vital role in the economic success of our empire, we cannot possibly risk losing them."
   PB_RUS_Workshop_of_the_East:0 "The Workshop of the East"
+  PB_RUS_Workshop_of_the_East_desc:0 "Russia has endured a great deal, but the rest of the world remains equally devastated. This is a golden opportunity to fill in the gaps in the enemies of the world with our own industries. 'Made in Russia' will be on every Radio, every rifle, every automaton! The world will know our Empire as the workshop of the east. So well ingrained into the global supply chain that we will be economically unassailable."
   PB_RUS_Russian_Labour_Committee:0 "The United Russian Labour Committee"
   PB_RUS_Russian_Labour_Committee_desc:0 "While we have emerged victorious against enemies both without and within, there is still calls for change. Ignoring these voices is no longer an option, so instead some concessions must be granted. Though some fear this will invite Socialist influence, it may instead offer stability. By showing the workers that we have their best interests at heart, not only will they turn away from the Jacobins but instead they will come to us for support. Not to mention the improvements to our nation's standard of living."
   PB_RUS_Industrial_Stratocracy:0 "Industrial Stratocracy"
@@ -1043,6 +1047,7 @@
   PB_RUS_Address_the_Duma:0 "Address the Reformists in the Duma"
   PB_RUS_Address_the_Duma_desc:0 "While not a threat to our nation's future, the Kadet faction within the Duma have become an increasingly loud voice. Calling for reforms and moderate change to build a new future for Russia. This is a voice that has now shown itself to be the right path. For Russia to survive change, even if moderate, must be carried out. The Kadets' ideas will he implemented immediately and stability ensured."
   PB_RUS_Ministry_of_Academics:0 "Establish the Ministry of Academics"
+  PB_RUS_Ministry_of_Academics_desc:0 "If we want Russia to advance into the modern era, then we must embrace the rise of technology. Our vast population is filled the potential academics of the future, but they lack the opportunity to use this genius. Not just for the take of Russia, but the entire world. To this end, a new Ministry of Academics will be set up. Its purpose being to ensure steady scientific advancement for our Empire."
   PB_RUS_Curtail_Blackhundredists:0 "Curtail the Blackhundredists"
   PB_RUS_Curtail_Blackhundredists_desc:0 "The Black Hundreds claim to be a religious paramilitary group that fully support Russia and its empire. Yet, in reality, they are nothing but hateful thugs who seek to trample upon the hard-earned rights of the people at the behest of their masters in the Moscow Circle. We will no longer tolerate their hateful lies and actions. The government will begin cracking down on the Black Hundreds and enact measures to make sure they will no longer be able to spread their hateful rhetoric."
   PB_RUS_Subsume_Blackhundredists:0 "Subsume the Blackhundredists"
@@ -1061,6 +1066,7 @@
   PB_RUS_Curtail_Regional_Autonomy:0 "Curtail Regional Autonomy"
   PB_RUS_Curtail_Regional_Autonomy_desc:0 "The autonomous regions of Russia have done nothing but resist and rebel, ungrateful for the freedoms generously given to them. To expedite cultural integration into the mainstream Russian culture and as punishment for these rebellions, the autonomy previously bestowed upon the regions shall be stripped away."
   PB_RUS_Party_State:0 "Dreams of a Party State"
+  PB_RUS_Party_State_desc:0 "The Party has brought and will continue to bring prosperity to Russia’s people. Reforms to help our least fortunate and ensure a higher standard of living for all will be implemented. To ensure this continued prosperity, a new Secret Police will be established to survey and protect the people. Maintaining party rule and crushing dissent will just be a happy side effect."
   PB_RUS_Unenlightened_Masses:0 "Guide the Unenlightened Masses"
   PB_RUS_A_United_Russia:0 "The Stoylpinist Legacy Secured"
 
@@ -1071,6 +1077,7 @@
   PB_RUS_Autonomism:0 "Expand the Autonomist Model"
   PB_RUS_Autonomism_desc:0 "For much of its existence, the autonomist model has only applied to those in the western territories, but it has come time to expand it. The existing model used for the Ukrainians, Poles, Balts, etc, will be applied to the empire’s other minorities groups, such as Tatars and Yakuts for a more equal empire."
   PB_RUS_Abolish_Gulag:0 "Abolish the Aleutian Islands Sector"
+  PB_RUS_Abolish_Gulag_desc:0 "We have little need for a separate sector for the Aleutians. It is time they are brought under direct rule, so that the Empire and party may better prosper."
   PB_RUS_Weaponize_Middle_Class:0 "Weaponize the Middle Class"
   PB_RUS_Declaration_of_Rights:0 "The New Declaration of Rights"
   PB_RUS_Constitutional_Monarchy:0 "Relinquish Tsarist Authority"
