more and more and more russia loc

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1068,7 +1068,9 @@
   PB_RUS_Party_State:0 "Dreams of a Party State"
   PB_RUS_Party_State_desc:0 "The Party has brought and will continue to bring prosperity to Russia’s people. Reforms to help our least fortunate and ensure a higher standard of living for all will be implemented. To ensure this continued prosperity, a new Secret Police will be established to survey and protect the people. Maintaining party rule and crushing dissent will just be a happy side effect."
   PB_RUS_Unenlightened_Masses:0 "Guide the Unenlightened Masses"
+  PB_RUS_Unenlightened_Masses_desc:0 "Even with all of our advancements in science, the human brain remains one of the greatest mysteries in the world. But that does not mean it cannot be utilised. We will begin work on the 'Commonality Consensus Project', the goal of this project is to create a collective subconscious that our citizens will be linked into. While this has many applications, we shall use it to subtly shift public opinion away from political groups and parties that we find...disagreeable."
   PB_RUS_A_United_Russia:0 "The Stoylpinist Legacy Secured"
+  PB_RUS_A_United_Russia_desc:0 "If we want to ensure the stability of Russia, we cannot allow ourselves to be ideologically fractured with those who would otherwise be compatible with our ideals. To avoid this, we can consolidate all such parties into a single 'Russian National' Party. Ensuring that we remain unified and aligned for the foreseeable future."
 
   PB_RUS_Glasnost:0 "Glasnost Policy"
   PB_RUS_Glasnost_desc:0 "The Alexandiran Reforms of the pre-war regime were an excellent start for our future but they did not go far enough. Rather than remove or replace them, we still expand these reforms through the policy of Glasnost or 'Openness' as it is known in English. We shall grant the people the changes they have desired, like freedom of the press and the right to assembly. We can even grant some improved rights for the women our nation, they have earned them through battle. The Russian Empire will be a free nation"
@@ -1083,8 +1085,11 @@
   PB_RUS_Constitutional_Monarchy:0 "Relinquish Tsarist Authority"
   PB_RUS_Support_Lunacharsky:0 "Support the Lunacharskyites"
   PB_RUS_Perfect_Democracy:0 "In Search of a Perfect Democracy"
+  PB_RUS_Perfect_Democracy_desc:0 "Democracy is often said to be the worst system of government save for all the other ones. This sadly remains true, but that will no longer be the case. We will begin work on the 'Commonality Consensus Project', the goal of this project is to create a collective subconscious linking our entire nation. Through this we can create a democracy via consensus not ballot, making it completely fair and unbiased."
   PB_RUS_Slavic_Union:0 "The Brotherhood of the East"
+  PB_RUS_Slavic_Union_desc:0 "Our nation can no longer be simply the 'Russian' Empire. While it is the Russian people who founded it, other Slavic groups have been exploited and oppressed, the Poles and the Ukrainians as examples. But no more. We are all brothers on the East, no more disunity between them and us. All Slavs will be welcome into our Union. For the future of all Slavs!"
   PB_RUS_Revolutionary_Empire:0 "The Evolution of Revolution"
+  PB_RUS_Revolutionary_Empire_desc:0 "With our nation secured and its enemies defeated, we can ensure the creation of a new Empire. Many in the past believed that Revolutionary ideas are incompatable with the Imperial government, but we will prove otherwise. By empowering local democratic insitutions and shifting our economic policy, we can present the blending of old and new ideas. A new Revolutionary Empire in more ways than one"
 
   PB_RUS_Not_So_Invisible:0 "The Not-So-Invisible Hand"
   PB_RUS_Not_So_Invisible_desc:0 "At long last, the Moscow Circle has come out of the shadows and seized control, snuffing out Russia's nascent democracy before it could even truly be born. With the empire now within their iron grip, they seek to restore Russia to glory, as it was before the ideas of liberalism wormed their way into the motherland and began rotting it from the inside."
