all russian foci done
:3

--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1169,6 +1169,7 @@
   PB_RUS_The_Red_Menace:0 "The Red Menace"
   PB_RUS_The_Red_Menace_desc:0 "The cunning Jap is at it again. The revolutionary government there is proving to be no different than the imperial government they toppled. It is necessary to clamp down hard on them and contain their foul influence to their accursed islands so we do not get bogged down in another Siberian Campaign against them and their allies."
   PB_RUS_Okhrana_Operations_Scandinavia:0 "Okhrana Operations: §YScandinavia§!"
+  PB_RUS_Okhrana_Operations_Scandinavia_desc:0 "Through Karelia and Finland, Russia has always held a level of influence over Scandinavia and many view the old land of vikings as rightful Russian clay at this point. The Okhrana shall see that our grip over the region is secured."
   PB_RUS_Safeguard_The_Artic:0 "Safeguard The Arctic"
   PB_RUS_Safeguard_The_Artic_desc:0 "The Scandinavian nations have long feared that we may come for them one day, which is why they supported the Finnish rebellion. We can overlook this and open negotiations with them to soothe their concerns over us potentially attacking them. There's no reason for us to fight, after all."
   PB_RUS_The_Romanov_Crown_In_Kristiana:0 "The Romanov Crown In Kristiana"
@@ -1177,6 +1178,7 @@
   PB_RUS_Seize_The_Swedish_Baltic:0 "Seize The Swedish Baltic"
   PB_RUS_Seize_The_Swedish_Baltic_desc:0 "The Baltic is Russia's backyard, yet the Swedish still hold islands that should belong to us by right! It's time to seize the islands of Gotland and Aland to rectify this mistake."
   PB_RUS_Okhrana_Operations_Balkans:0 "Okhrana Operations: §YBalkans§!"
+  PB_RUS_Okhrana_Operations_Balkans_desc:0 "The Balkans are rightfully our sphere of influence. If the French wanted a foothold, they should have won the First Great War. We shall do our best to shape the tumultuous region to our whims."
   PB_RUS_Support_The_Bulgarians:0 "Support The Bulgarians"
   PB_RUS_Support_The_Bulgarians_desc:0 "The Serbs, despite our brotherhood, are not bordering our Tsargrad holding. On the other hand, there is Bulgaria, which does border Tsargrad. Their alliance with the Jacobins in Budapest, impromptu it may be, is something that should be fixed at once. We will begin work on drawing them out of their impromptu alliance with the Jacobins in Budapest and bringing them firmly into our sphere, even though it may cost us our Serbian allies. We installed the Bulgarian prince, so hopefully they will be receptive to our overtures."
   PB_RUS_Support_The_Serbians:0 "Support The Serbians"
@@ -1186,11 +1188,15 @@
   PB_RUS_Fortify_The_Hungarian_Border:0 "Fortify The Hungarian Border"
   PB_RUS_Fortify_The_Hungarian_Border_desc:0 "During the National Awakening in the 1920s, the Hungarian border was left unguarded, and as a result, weapons from the degenerate government in Budapest flowed with abandon to the rebels. Even after the uprisings were crushed, Hungarian weapons trickled into the rump Galician government's territory, empowering the stubborn rebels there. Now, with the failure of a bulwark removed, it is time we reenforce the border so no more of these accursed weapons end up in rebel hands."
   PB_RUS_Okhrana_Operations_Middle_East:0 "Okhrana Operations: §YMiddle East§!"
+  PB_RUS_Okhrana_Operations_Middle_East_desc:0 "The Ottomans lay firmly under Russia’s thumb and the British find their own influence in the region waning. Nothing is stopping us from remaking the land with such copious oil and birth place of the three great Abrahamic faiths in our image."
   PB_RUS_The_Enemy_Of_My_Enemy:0 "The Enemy Of My Enemy"
+  PB_RUS_The_Enemy_Of_My_Enemy_desc:0 "While some advocate for an armed invasion of the Persians, the truth is that we both share a common enemy. The British and their lapdogs have caused their fair share of problems for our Southern Neighbor, and by approaching on this common ground, we could gain a valuable new ally."
   PB_RUS_Pressure_Tehran:0 "Pressure Tehran"
+  PB_RUS_Pressure_Tehran_debug:0 "Long defended by the British, the Persians now have no one to turn to as British influence in the world dissapates. They will submit to us peacefully or face an invasion they cannot defend against. At long last, we shall expand all the way to the gulf, as has been our dream since we first began expanding into Central Asia. And as the Third Rome, we shall do what the first and second could not and put the Parthians under our thumb."
   PB_RUS_The_Graveyard_Of_Empires:0 "The Graveyard of Empires"
   PB_RUS_The_Graveyard_Of_Empires_desc:0 "Afghanistan has long sat under Russian influence, but as a free sovereign state. It's time we finally bind them to our will and brought them firmly under our grasp."
   PB_RUS_Okhrana_Operations_Africa:0 "Okhrana Operations: §YAfrica§!"
+  PB_RUS_Okhrana_Operations_Africa_desc:0 "Famously, Russia was the only great power in Europe to not carve out a foothold of its own in Africa, at least not formally. There has long been a Russian settlement in East Africa that we never officially brought into the fold out of fear of international incident, but also never denounced either. Perhaps support could be given to them to shoot out and at last establish a proper Russian colony in the Horn of Africa and gain the prestige and resources that would come with such a venture. Then again, we’ve also long held a positive relationship with the Abyssinians as fellow Orthodox nations. Perhaps instead of pursuing the old way of imperialism in Africa, we should extend a hand of friendship. Could prove useful against the British too."
   PB_RUS_Ally_With_The_Negus:0 "Ally With The Negus"
   PB_RUS_Ally_With_The_Negus_desc:0 "Ethiopia, the last independent nation in Africa, has the workings of a potential ally for Russia. They are an Orthodox Christian nation surrounded by Muslims, they are surrounded by British colonies, and they are located along the Red Sea. On top of that, the rising power of the Rastifarian movement presents a great oppurtunity at striking at our rivals' holdings in the Dark Continent. Ethoipia is better off as an ally to Russia than as a colony, so let us begin making overtures to the Negusa Nagast so that we may draw them into our sphere."
   PB_RUS_Sagallo_Overtures:0 "Sagallo Overtures"
