--- a/localisation/english/PB_country_specific/PB_Germany_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Germany_l_english.yml
@@ -1504,6 +1504,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   
   PB_GER_Seize_the_Colonial_Fleet:0 "Seize Command over the Pacific Fleet"
   PB_GER_Seize_the_Colonial_Fleet_desc:0 "The war we currently face demands serious centralized decision-making from Frankfurt, as the very existance of the German sovereign is at stake. We thus need to put the Pacific fleet under the central control of the European high command, potentially for use in the waters of the European continent."
+
+  PB_GER_Expand_Siegfried_Line: "Expand Siegfried Line"
   
   ##########################
   # KINGDOMS MECHANIC
@@ -1796,6 +1798,8 @@ PB_GER_bring_the_australiens_under_the_fold_desc:0 ""
   GER_War_Hungary:0 "Has declared war on Hungary"
 
   GER_Frankish_Empire_tt:0 "§YGermany§! will be known as §YFrancia§!\nColonial subjects in §YAfrica§! and §YAsia§! will get new flags and names\nShould [BRG.GetFlag] §YBurgundy§! exist you will also annex them"
+
+ PB_GER_expand_siegfred_line_tt: "Unlock £decision_icon_small §YExpanding Siegfried Line decision§!"
 
   ##########################
   # COSMETIC TAGS
