i just had french toast for dinner, hbu?
it was stuffed too btw, fucking goated

--- a/localisation/english/PB_State_Focus_l_english.yml
+++ b/localisation/english/PB_State_Focus_l_english.yml
@@ -12,6 +12,11 @@ PB_state_focus_3_tt_delayed: "Modifies State Manpower Factor By §G+[get_state_f
 PB_state_focus_4_tt: "Resource Extraction Investments"
 PB_state_focus_4_tt_delayed: "Modifies State Resource Factor By §G+[get_state_focus_amount]%§!"
 PB_state_focus_clear_all_tt: "Remove All Active State Focuses"
+PB_state_focus_current_and_max_text: "[?ROOT.PB_states_with_active_focus^num]/[?ROOT.PB_State_Focus_Cap]"
+PB_state_focus_current_and_max_tt: "[get_state_focus_list]"
+PB_state_focus_no_states_tt: "No States with an Active Focus."
+PB_state_focus_print_states_tt: "States with an Active Focus:[render_active_state_focuses]"
+PB_active_state_focuses_entry: "\n    - §Y[?current_state.GetName]§! (§Y[get_state_focus_name]§!)[render_active_state_focuses]"
 
 PB_state_focus_modifiers_0: "£pol_idea Industrial Investments"
 PB_state_focus_modifiers_1: "£pol_idea Military Investments"
