--- a/localisation/english/PB_country_specific/PB_Russia_l_english.yml
+++ b/localisation/english/PB_country_specific/PB_Russia_l_english.yml
@@ -1164,6 +1164,7 @@
   
   PB_RUS_The_Russian_Century:0 "The Russian Century"
   PB_RUS_Okhrana_Operations_Asia:0 "Okhrana Operations: §YAsia§!"
+  PB_RUS_Okhrana_Operations_Asia_desc:0 "With Japan unstable and China on fire, Asia, largest and most populated continent on earth, shall officially become our backyard. The Eagle shall sink its talons into every corner of this rich continent."
   PB_RUS_Peninsular_Security:0 "Peninsular Security"
   PB_RUS_Peninsular_Security_desc:0 "During the Great War, we fought and bled heavily to push the Japanese out of Korea, yet now, it seems that the Japanese seek once more to take over Korea. We must make sure all those brave soldiers of the motherland who perished in Korea all those years ago do not have their lives lost in vain. It is time we brought Korea into our fold to deter any Japanese ambitions on the peninsula."
   PB_RUS_The_Red_Menace:0 "The Red Menace"
@@ -1192,7 +1193,7 @@
   PB_RUS_The_Enemy_Of_My_Enemy:0 "The Enemy Of My Enemy"
   PB_RUS_The_Enemy_Of_My_Enemy_desc:0 "While some advocate for an armed invasion of the Persians, the truth is that we both share a common enemy. The British and their lapdogs have caused their fair share of problems for our Southern Neighbor, and by approaching on this common ground, we could gain a valuable new ally."
   PB_RUS_Pressure_Tehran:0 "Pressure Tehran"
-  PB_RUS_Pressure_Tehran_debug:0 "Long defended by the British, the Persians now have no one to turn to as British influence in the world dissapates. They will submit to us peacefully or face an invasion they cannot defend against. At long last, we shall expand all the way to the gulf, as has been our dream since we first began expanding into Central Asia. And as the Third Rome, we shall do what the first and second could not and put the Parthians under our thumb."
+  PB_RUS_Pressure_Tehran_desc:0 "Long defended by the British, the Persians now have no one to turn to as British influence in the world dissapates. They will submit to us peacefully or face an invasion they cannot defend against. At long last, we shall expand all the way to the gulf, as has been our dream since we first began expanding into Central Asia. And as the Third Rome, we shall do what the first and second could not and put the Parthians under our thumb."
   PB_RUS_The_Graveyard_Of_Empires:0 "The Graveyard of Empires"
   PB_RUS_The_Graveyard_Of_Empires_desc:0 "Afghanistan has long sat under Russian influence, but as a free sovereign state. It's time we finally bind them to our will and brought them firmly under our grasp."
   PB_RUS_Okhrana_Operations_Africa:0 "Okhrana Operations: §YAfrica§!"
